--- a/Practice_2020/HW7-8/index.html
+++ b/Practice_2020/HW7-8/index.html
@@ -51,31 +51,31 @@
                 </ul>
             </nav>
             <div class="carousel page-header__carousel">
-            <div class="carousel__wrapper">
-                <a class="carousel__link" href="#">
-                    <img src="carousel/carousel__link-back.png" alt="carousel__link-back">
-                </a>
-                <div class="carousel__item">
-                    <div class="carousel__title">lorem ipsum dolor</div>
-                    <div class="carousel__subtitle">it will make all your dreams come</div>
-                    <div class="carousel__text hidden_less-than-768 text text_preview">
-                        Semper sollicitudin gravida eget, vestibulum sit amet sapien. Nunc dignissim tincidunt est,
-                        et auctor turpis ornare a. Nam venenatis hendrerit est at volutpat. Morbi elementum euismod
-                        lacus id semper. In odio nunc, imperdiet eget aliquam quis, euismod id lectus. Nulla interdum
-                        arcu et felis aliquam a tempus lectus lobortis..</div>
+                <div class="carousel__wrapper">
+                    <a class="carousel__link" href="#">
+                        <img src="carousel/carousel__link-back.png" alt="carousel__link-back">
+                    </a>
+                    <div class="carousel__item">
+                        <div class="carousel__title">lorem ipsum dolor</div>
+                        <div class="carousel__subtitle">it will make all your dreams come</div>
+                        <div class="carousel__text hidden_less-than-768 text text_preview">
+                            Semper sollicitudin gravida eget, vestibulum sit amet sapien. Nunc dignissim tincidunt est,
+                            et auctor turpis ornare a. Nam venenatis hendrerit est at volutpat. Morbi elementum euismod
+                            lacus id semper. In odio nunc, imperdiet eget aliquam quis, euismod id lectus. Nulla interdum
+                            arcu et felis aliquam a tempus lectus lobortis..</div>
+                    </div>
+                    <img class="carousel__img hidden_less-than-320" src="carousel/carousel_img.png" alt="iphone">
+                    <a class="carousel__link" href="#">
+                        <img src="carousel/carousel__link-forward.png" alt="carousel__link-forward">
+                    </a>
                 </div>
-                <img class="carousel__img hidden_less-than-320" src="carousel/carousel_img.png" alt="iphone">
-                <a class="carousel__link" href="#">
-                    <img src="carousel/carousel__link-forward.png" alt="carousel__link-forward">
-                </a>
+                <div class="pagination page-header__pagination">
+                    <div class="pagination__page"></div>
+                    <div class="pagination__page pagination__page_active"></div>
+                    <div class="pagination__page"></div>
+                    <div class="pagination__page"></div>
+                </div>
             </div>
-            <div class="pagination page-header__pagination">
-                <div class="pagination__page"></div>
-                <div class="pagination__page pagination__page_active"></div>
-                <div class="pagination__page"></div>
-                <div class="pagination__page"></div>
-            </div>
-        </div>
         </div>
     </header>
 <!--SECTION-->
@@ -114,20 +114,20 @@
                 <a class="article__link text-uppercase text-uppercase_link" href="">read more</a>
             </article>
             <article class="article section-info__item">
-            <div class="article__icon article__icon_music-notes"></div>
-            <h2 class="article__title text-uppercase">about our company</h2>
-            <p class="article__text text text_preview">Nunc turpis neque, feugiat eget eleifend et,
-                lacinia non neque. Praesent rhoncus ultrices posuere. Pellentesque vel
-                lacus eget nisi convallis auctor. Nam vitae lectus eu libero pellentesque pulvinar.
-                Quisque urna risus, mattis pulvinar bibendum in, venenatis quis neque.
-                Mauris nec metus ultricies erat consequat dignissim non eu nisl.
-                Quisque libero tellus, pharetra et eleifend id, interdum elementum arcu.
-                Suspendisse quis mauris non ligula rutrum faucibus eu quis odio.
-                Phasellus eu lobortis odio. In hac habitasse platea dictumst.
-                Proin vestibulum turpis at mauris aliquam non euismod lorem euismod.
-                Aenean dapibus ultricies enim, eget vulputate leo feugiat non.
-            </p>
-            <a class="article__link text-uppercase text-uppercase_link" href="">read more</a>
+                <div class="article__icon article__icon_music-notes"></div>
+                <h2 class="article__title text-uppercase">about our company</h2>
+                <p class="article__text text text_preview">Nunc turpis neque, feugiat eget eleifend et,
+                    lacinia non neque. Praesent rhoncus ultrices posuere. Pellentesque vel
+                    lacus eget nisi convallis auctor. Nam vitae lectus eu libero pellentesque pulvinar.
+                    Quisque urna risus, mattis pulvinar bibendum in, venenatis quis neque.
+                    Mauris nec metus ultricies erat consequat dignissim non eu nisl.
+                    Quisque libero tellus, pharetra et eleifend id, interdum elementum arcu.
+                    Suspendisse quis mauris non ligula rutrum faucibus eu quis odio.
+                    Phasellus eu lobortis odio. In hac habitasse platea dictumst.
+                    Proin vestibulum turpis at mauris aliquam non euismod lorem euismod.
+                    Aenean dapibus ultricies enim, eget vulputate leo feugiat non.
+                </p>
+                <a class="article__link text-uppercase text-uppercase_link" href="">read more</a>
         </article>
         </div>
     </section>
@@ -157,14 +157,13 @@
                  </article>
                  <div class="pagination main-content__pagination">
                      <div class="pagination__page pagination__page_theme_light"></div>
-                     <div class="pagination__page pagination__page_theme_light
-                                 pagination__page_active_theme_light"></div>
+                     <div class="pagination__page pagination__page_theme_light pagination__page_active"></div>
                      <div class="pagination__page pagination__page_theme_light"></div>
                      <div class="pagination__page pagination__page_theme_light"></div>
                 </div>
              </div>
              <div class="main-content__item ">
-             <div class="recent-updates main-content__recent-updates">
+                 <div class="recent-updates main-content__recent-updates">
                  <h2 class="recent-updates__header text-uppercase">recent updates</h2>
                  <div class="recent-updates__item">
                      <div class="recent-updates__icon"></div>
