Change cod style

--- a/Practice_2020/HW7-8/index.html
+++ b/Practice_2020/HW7-8/index.html
@@ -7,7 +7,6 @@
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="fonts/fonts.css">
-    <link rel="stylesheet" href="objects/objects.css">
     <link rel="stylesheet" href="hidden/hidden.css">
     <link rel="stylesheet" href="utilites/utilites.css">
     <link rel="stylesheet" href="text/text.css">
@@ -215,7 +214,7 @@
 
                  <article class="c-article  c-main-content__article">
 
-                     <img class="c-article__icon" src="main-content/main-content_avatar.png">
+                     <img class="c-article__icon" src="main-content/main-content_avatar.png" alt="icon">
 
                      <div class="c-article__bd">
                          <h2 class="c-article__title  text-uppercase">pingbuller
@@ -256,7 +255,8 @@
 
                      <div class="c-article">
 
-                         <img class="c-article__icon" src="recent-updates/updates_icon.png" alt="article__icon">
+                         <img class="c-article__icon" src="recent-updates/updates_icon.png"
+                              alt="article__icon">
 
                          <div class="c-article__bd">
 
@@ -275,7 +275,8 @@
 
                      <div class="c-article">
 
-                         <img class="c-article__icon" src="recent-updates/updates_icon.png" alt="article__icon">
+                         <img class="c-article__icon" src="recent-updates/updates_icon.png"
+                              alt="article__icon">
 
                          <div class="c-article__bd">
 
@@ -294,7 +295,8 @@
 
                  <div class="c-article">
 
-                     <img class="c-article__icon" src="recent-updates/updates_icon.png" alt="article__icon">
+                     <img class="c-article__icon" src="recent-updates/updates_icon.png"
+                          alt="article__icon">
 
                      <div class="c-article__bd">
 
@@ -325,12 +327,30 @@
  <!--BANNERS-->
     <aside class="banners  page__banners">
         <div class="banners__list  page__banners-list">
-            <a class="banners__link" href="#"><img src="banners/banner1.png" class="banners__image" alt="banner"></a>
-            <a class="banners__link" href="#"><img src="banners/banner2.png" class="banners__image" alt="banner"></a>
-            <a class="banners__link" href="#"><img src="banners/banner3.png" class="banners__image" alt="banner"></a>
-            <a class="banners__link" href="#"><img src="banners/banner4.png" class="banners__image" alt="banner"></a>
-            <a class="banners__link" href="#"><img src="banners/banner5.png" class="banners__image" alt="banner"></a>
-            <a class="banners__link" href="#"><img src="banners/banner6.png" class="banners__image" alt="banner"></a>
+            <a class="banners__link" href="#">
+                <img src="banners/banner1.png" class="banners__image" alt="banner">
+            </a>
+
+            <a class="banners__link" href="#">
+                <img src="banners/banner2.png" class="banners__image" alt="banner">
+            </a>
+
+            <a class="banners__link" href="#">
+                <img src="banners/banner3.png" class="banners__image" alt="banner">
+            </a>
+
+            <a class="banners__link" href="#">
+                <img src="banners/banner4.png" class="banners__image" alt="banner">
+            </a>
+
+            <a class="banners__link" href="#">
+                <img src="banners/banner5.png" class="banners__image" alt="banner">
+            </a>
+
+            <a class="banners__link" href="#">
+                <img src="banners/banner6.png" class="banners__image" alt="banner">
+            </a>
+
         </div>
     </aside>
 
@@ -340,10 +360,15 @@
 
  <!--NEWS-->
     <section class="news  hidden_less-than-320  u-block-center-column  page__news">
+
         <div class="news__wrapper  u-block-align">
+
             <article class="c-article__bd  news__article">
+
                 <h2 class="c-article__title  text-uppercase">pingbull<span>er</span></h2>
+
                 <div class="news__copyright">Copyright 2013, Pingbull AS</div>
+
                 <p class="c-article__text  text text_preview">Nunc turpis neque, feugiat
                     eget eleifend et, lacinia non neque. Praesent rhoncus ultrices posuere.
                     Pellentesque vel lacus eget nisi convallis auctor. Nam vitae lectus eu
@@ -355,9 +380,13 @@
                     Proin vestibulum turpis at mauris aliquam non euismod lorem euismod.
                     Aenean dapibus ultricies enim, eget vulputate leo feugiat non.
                 </p>
+
             </article>
+
             <article class="c-article__bd  news__article">
+
                 <h2 class="c-article__title  text-uppercase">recent comments</h2>
+
                 <p class="c-article__text  text  text_preview">Nunc turpis neque, feugiat
                     eget eleifend et, lacinia non neque. Praesent rhoncus ultrices posuere.
                     Pellentesque vel lacus eget nisi convallis auctor. Nam vitae lectus eu
@@ -369,9 +398,13 @@
                     Proin vestibulum turpis at mauris aliquam non euismod lorem euismod.
                     Aenean dapibus ultricies enim, eget vulputate leo feugiat non.
                 </p>
+
             </article>
+
             <article class="c-article__bd  news__article">
+
                 <h2 class="c-article__title  text-uppercase">news categories</h2>
+
                 <p class="c-article__text  text  text_preview">Nunc turpis neque, feugiat
                     eget eleifend et, lacinia non neque. Praesent rhoncus ultrices posuere.
                     Pellentesque vel lacus eget nisi convallis auctor. Nam vitae lectus eu
@@ -383,7 +416,9 @@
                     Proin vestibulum turpis at mauris aliquam non euismod lorem euismod.
                     Aenean dapibus ultricies enim, eget vulputate leo feugiat non.
                 </p>
+
             </article>
+
         </div>
     </section>
 
