JS-07-08. Create TAB on JS. V1.1

--- a/Practice_2020/JS-07-08/tabs.html
+++ b/Practice_2020/JS-07-08/tabs.html
@@ -12,9 +12,9 @@
 <body>
 
 <div class="tab" id="tabs">
-    <button class="tab-link"  data-city='London'>London</button>
-    <button class="tab-link"  data-city='Paris'>Paris</button>
-    <button class="tab-link"  data-city='Tokyo'>Tokyo</button>
+    <a class="tab-link"  href="#London">London</a>
+    <a class="tab-link"  href="#Paris">Paris</a>
+    <a class="tab-link"  href="#Tokyo">Tokyo</a>
 </div>
 
 <!-- Tab content -->
