JS-07-08. Tabs. Edded Handler for KeyDown event

--- a/Practice_2020/JS-07-08/tabs.html
+++ b/Practice_2020/JS-07-08/tabs.html
@@ -10,11 +10,11 @@
 
 <div class="tab">
     <div class="tab__list" id="tabs">
-        <a class="tab__link" href="#tab-1">London</a>
-        <a class="tab__link" href="#tab-2">Paris</a>
-        <a class="tab__link" href="#tab-3">Tokyo</a>
-        <a class="tab__link" href="#tab-4">Tokyo</a>
-        <a class="tab__link" href="#tab-5">Tokyo</a>
+        <a class="tab__link" href="#tab-1" tabindex="1">London</a>
+        <a class="tab__link" href="#tab-2" tabindex="2">Paris</a>
+        <a class="tab__link" href="#tab-3" tabindex="3">Tokyo</a>
+        <a class="tab__link" href="#tab-4" tabindex="4">Marid</a>
+        <a class="tab__link" href="#tab-5" tabindex="5">Rome</a>
     </div>
 
     <!-- Tab content -->
@@ -34,13 +34,13 @@
     </div>
 
     <div id="tab-4" class="tab__content">
-        <h3>Paris</h3>
-        <p>Paris is the capital of France.</p>
+        <h3>Madris</h3>
+        <p>Paris is the capital of Spain.</p>
     </div>
 
     <div id="tab-5" class="tab__content">
-        <h3>Tokyo</h3>
-        <p>Tokyo is the capital of Japan.</p>
+        <h3>Rome</h3>
+        <p>Tokyo is the capital of Italy.</p>
     </div>
 
 </div>
