Created slide-down menu with jquery. Applied to vertical menu

--- a/Practice_2020/JS-10/index.html
+++ b/Practice_2020/JS-10/index.html
@@ -22,11 +22,15 @@
         </div>
 
         <nav class="header__menu">
+
             <ul class="menu header-menu__list">
-                <li class="header-menu__item">
+
+                <li class="header-menu__item js-menu__item">
+
                     <a href="#" class="header-menu__link">Главная</a>
 
-                    <ul class="header__submenu">
+                    <ul class="js-submenu header__submenu">
+
                         <li class="header__submenu__item">
                             <a href="#" class="header-submenu__link" >Главная Подменю 1</a>
                         </li>
@@ -42,13 +46,18 @@
                         <li class="header__submenu__item">
                             <a href="#" class="header-submenu__link">Главная Подменю 1</a>
                         </li>
+
                     </ul>
+
                 </li>
 
 
-                <li class="header-menu__item">
+                <li class="header-menu__item js-menu__item">
+
                     <a href="#" class="header-menu__link">Товары</a>
-                    <ul class="header__submenu">
+
+                    <ul class="js-submenu header__submenu">
+
                         <li class="header__submenu__item">
                             <a href="#" class="header-submenu__link" >Товары Подменю 1</a>
                         </li>
@@ -64,16 +73,18 @@
                         <li class="header__submenu__item">
                             <a href="#" class="header-submenu__link">Товары Подменю 1</a>
                         </li>
+
                     </ul>
+
                 </li>
 
 
-                <li class="header-menu__item">
+                <li class="header-menu__item js-menu__item">
                     <a href="#" class="header-menu__link">О_нас</a>
                 </li>
 
 
-                <li class="header-menu__item">
+                <li class="header-menu__item js-menu__item">
                     <a href="#" class="header-menu__link ">Контакты</a>
                 </li>
 
@@ -90,12 +101,39 @@
         <nav class="catalog">
 
             <ul class="catalog__list">
-                <li class="catalog__item"><a href="#" class="catalog__link">Ноутбуки</a></li>
-                <li class="catalog__item"><a href="#" class="catalog__link">Планшеты</a></li>
-                <li class="catalog__item"><a href="#" class="catalog__link">Телефоны</a></li>
-                <li class="catalog__item"><a href="#" class="catalog__link">Телевзоры</a></li>
-                <li class="catalog__item"><a href="#" class="catalog__link">Бытовая техника</a></li>
-                <li class="catalog__item"><a href="#" class="catalog__link">Автотовары</a></li>
+
+                <li class="catalog__item js-menu__item">
+
+                    <a href="#" class="catalog__link">Ноутбуки</a>
+
+                    <ul class="js-submenu catalog__submenu">
+
+                        <li class="catalog__submenu__item">
+                            <a href="#" class="catalog-submenu__link" >Ноутбуки Подменю 1</a>
+                        </li>
+
+                        <li class="catalog__submenu__item">
+                            <a href="#" class="catalog-submenu__link">Ноутбуки Подменю 1</a>
+                        </li>
+
+                        <li class="catalog__submenu__item">
+                            <a href="#" class="catalog-submenu__link">Ноутбуки Подменю 1</a>
+                        </li>
+
+                        <li class="catalog__submenu__item">
+                            <a href="#" class="catalog-submenu__link">Ноутбуки Подменю 1</a>
+                        </li>
+
+                    </ul>
+
+                </li>
+
+
+                <li class="catalog__item js-menu__item"><a href="#" class="catalog__link">Планшеты</a></li>
+                <li class="catalog__item js-menu__item"><a href="#" class="catalog__link">Телефоны</a></li>
+                <li class="catalog__item js-menu__item"><a href="#" class="catalog__link">Телевзоры</a></li>
+                <li class="catalog__item js-menu__item"><a href="#" class="catalog__link">Бытовая техника</a></li>
+                <li class="catalog__item js-menu__item"><a href="#" class="catalog__link">Автотовары</a></li>
             </ul>
 
         </nav>
