Plugin for slider with 7zip file

--- a/Practice_2020/JS-11/index.html
+++ b/Practice_2020/JS-11/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Home Work. JS-11. Carousel plugin</title>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/jquery.slider.css">
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="js/jquery.slider.js"></script>
     <script src="js/script.js"></script>
