--- a/Practice_2020/JS-15/index.html
+++ b/Practice_2020/JS-15/index.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8">
     <title>Home Work JS-15</title>
 
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
+          rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
+          crossorigin="anonymous">
+
     <link rel="stylesheet" href="css/style.css">
 
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
@@ -13,20 +17,38 @@
 </head>
 
 <body>
+
 <div class="page page__form">
 
-<form name="search-form" method="post" action="" class="">
-    <input type="text" name="search-phrase" id="search-phrase">
-    <input type="submit">
-    <input type="reset" value="Очистить">
-</form>
-
-<div class="search-results">
+    <form name="search-form" method="get" action="" class="form" id="formElem">
+        <input type="submit" id="submit-button" value="get users">
+        <input type="reset" id="reset-button">
+    </form>
 
 </div>
 
+<script type="text/template" id="gitUsers">
 
-</div>
+    <ul class="list-unstyled  d-flex  flex-row  flex-wrap  ms-4">
+
+        <%for (let i = 0; i < data.length; i++) { %>
+
+            <li class="media my-4 me-2">
+
+                <img class="me-3" src="<%=data[i].avatar_url%>" alt="avatar image" width="75">
+
+                <div class="media-body">
+                    <%=data[i].login%>
+                </div>
+
+            </li>
+
+        <% } %>
+
+    </ul>
+
+</script>
+
 </body>
 
 </html>
