--- a/Practice_2020/JS-19/app/index.html
+++ b/Practice_2020/JS-19/app/index.html
@@ -6,8 +6,9 @@
     <link rel="stylesheet" href="css/app.min.css">
 
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="js/plugins/1jquery.jcarousel.js"></script>
+    <script src="js/plugins/jcarousel.basic.js"></script>
     <script src="js/app.min.js"></script>
-
 
 </head>
 
@@ -98,6 +99,14 @@
 
         <div     class="wrapper__carousel">
             <div class="container">
+
+              <div  class="slider carousel">
+
+                      <div><img src="img/dist/carousel-img1.png" width="100%"  height="400px" alt=""></div>
+                      <div><img src="img/dist/carousel-img2.jpg"  width="100%" height="400px" alt=""></div>
+                      <div><img src="img/dist/carousel-img3.jpg" width="100%" height="400px" alt=""></div>
+
+              </div>
 
             </div>
         </div>
